# wsexample

./: Cargo.toml
config/: development.yaml  test.yaml
examples/: playground.rs
src/: app.rs
src/controllers/: mod.rs
src/initializers/: websocket.rs
tests/models/: users.rs
tests/requests/: auth.rs  prepare_data.rs
