[workspace]

[package]
name = "wsexample"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "wsexample-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.14.1" }

[dependencies]
loco-rs = { workspace = true  }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1.43.0", default-features = false, features = [
  "rt-multi-thread", "full"
] }
async-trait = { version = "0.1.86" }
axum = { version = "0.8.1" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
regex = { version = "1.11.1" }
migration = { path = "migration" }
sea-orm = { version = "1.1.5", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.19" }
uuid = { version = "1.13.2", features = ["v4"] }
include_dir = { version = "0.7" }
socketioxide = { version = "0.16.1", features = ["extensions", "state"] }
once_cell = "1.20.3"
futures-util = "0.3"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }

[[bin]]
name = "wsexample-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.2.0" }
rstest = { version = "0.24.0" }
insta = { version = "1.42.1", features = ["redactions", "yaml", "filters"] }
